--- a/index.css
+++ b/index.css
@@ -117,7 +117,7 @@ nav a:hover {
 }
 
 .head-img {
-  background: url('./head.jpeg');
+  background: url('./profile.png');
   width: 200px;
   height: 200px;
   background-size: 100% 100%;
