--- a/index.css
+++ b/index.css
@@ -117,7 +117,7 @@ nav a:hover {
 }
 
 .head-img {
-  background: url('./profile.png');
+  background: url('./IMG_2579.JPG');
   width: 300px;
   height: 350px;
   background-size: 100% 100%;
